test/libyul/yulSyntaxTests/objects/code_without_object.yul
code {
}
// ----
// ParserError 4294: (0-4='code'): Expected keyword "object".
